<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KillerApp</string>
    <string name="title_game_detail">Game Detail</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="menu_settings">Settings</string>
    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="youtube_api_demo">YouTube API Demos</string>
    <string name="videowall_demo_name">Video Wall</string>
    <string name="standalone_player_demo_name">Standalone Player</string>
    <string name="playerview_demo_name">Simple PlayerView</string>
    <string name="fragment_demo_name">Simple PlayerFragment</string>
    <string name="player_controls_demo_name">Custom Player Controls</string>
    <string name="action_bar_demo_name">Overlay ActionBar Demo</string>
    <string name="fullscreen_demo_name">Custom Fullscreen Handling</string>
    <string name="intents_demo_name">YouTube App Launcher Intents</string>
    <string name="playerview_text">This is a YouTubePlayerView!</string>
    <string name="playerfragment_text">This is a YouTubePlayerFragment!</string>
    <string name="demo_select">Please select a demo:</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip_to">Skip To</string>
    <string name="seconds">secs</string>
    <string name="player_style">Player Style</string>
    <string name="def">Default</string>
    <string name="minimal">Minimal</string>
    <string name="chromeless">Chromeless</string>
    <string name="play_video">Play video</string>
    <string name="play_playlist">Play playlist</string>
    <string name="start_index">Start index</string>
    <string name="start_time">Start time (sec)</string>
    <string name="autoplay">Autoplay</string>
    <string name="lightbox_mode">Lightbox mode</string>
    <string name="intent_select">Please select an action:</string>
    <string name="intent_disabled">This intent is not supported with the currently installed version of YouTube.</string>
    <string name="youtube_not_installed">YouTube is not installed on this device.</string>
    <string name="fullscreen_tutorial">This is a demo which shows how to handle fullscreen behaviour. This activity has differents layouts for portrait, landscape and fullscreen. The user can enter fullscreen either by using the player controller or programmatically by the programmer (here using a button). If your activity does not have a landscape layout, you can choose to automatically enter fullscreen when the device is rotated to landscape orientation.</string>
    <string name="enter_fullscreen">Enter Fullscreen</string>
    <string name="landscape_fullscreen">Always fullscreen in landscape</string>
    <string name="actionbar_tutorial">This is a demo which shows how to use the ActionBar as an overlay when the video is playing in fullscreen. The actionbar will automatically fade away along with the player controls when the video is being played in fullscreen. While not in fullscreen the Actionbar is visible and does not overlay any of the views.</string>
    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="back">Back</string>
    <string name="record">Record</string>
    <string name="cannot_record">Cannot record</string>
    <string name="recording">Recording</string>
    <string name="saved">Saved video</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="playing">Playing</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="cannot_delete">Cannot delete</string>
    <string name="completed_playback">Completed playback</string>
    <string name="your_video">Your Video</string>
    <string name="received"><u>Received</u></string>
    <string name="sent"><u>Sent</u></string>
    <string name="latest">Latest</string>
    <string name="previous">Previous</string>
    <string name="delta">Delta</string>
    <string name="device"><i>(device)</i></string>
    <string name="dev_key">"AI39si65-ckVUOrJGNp_eHsR5PbapuLEl5-QvVuEodNC_4T7iC9oQltcP69yxLqfTxWEx6iKo4jNNCSF0lqiv88dXIY-Dncwqw"</string>
    <string name="record">Record</string>
    <string name="strange">Something strange happened</string>
    <string name="max_duration">Maximum duration reached</string>
    <string name="max_size">Maximum file size reached</string>

</resources>